feat: 🎸 set default response
